# first_person_shooter

./: .gitignore  Cargo.toml  README.md
assets/: L1A1_aussie.blend  L1A1_aussie.glb  castle.glb  musket.blend  musket.glb  playground.blend  playground.glb
models/: musket.blend
src/: config.rs  firearm.rs  fog.rs  main.rs  main_menu.rs  multiplayer.rs  non_linear_time.rs  player.rs  sparks.rs
src/config/: controls.rs  graphics.rs  logging.rs  matchmaking.rs  mod.rs
src/config/graphics/: mod.rs  msaa.rs  particles.rs
src/controller/: bundle.rs  camera_controller.rs  input.rs  input_keyboard_and_mouse.rs  mod.rs  movement.rs  player.rs  set.rs
src/firearm/: mod.rs
src/input/: buttons.rs  mod.rs  pointer.rs  resync.rs
src/multiplayer/: input.rs  mod.rs
src/particles/: blood.rs  mod.rs  smoke.rs  sparks.rs
