[package]
name = "first_person_shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version="0.10", features=["serialize"] }
bevy_rapier3d = "0.21"
bevy_kira_audio = "0.15"
bevy_embedded_assets = "0.7"
bevy_hanabi = "0.6"
bevy_ggrs = { git="https://github.com/johanhelsing/bevy_ggrs", branch="bevy-0.10" }
ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"] }
bytemuck = "1.13"
matchbox_socket = { git="https://github.com/bushrat011899/matchbox", features = ["ggrs-socket"] }
simple_logger = "4.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
half = { version="2.2", features=["bytemuck", "serde"] }
enum-iterator = "1.4.0"
